made popup page and connect content script

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -5,7 +5,8 @@
     "description": "Tab your life to the future1",
     "permissions": [
       "activeTab",
-      "scripting"
+      "scripting",
+      "storage"
     ],
     "content_scripts": [
       {
