--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     },
     "dependencies": {
         "@tailwindcss/postcss": "^4.1.8",
+        "lucide-react": "^0.513.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
     },
