integrated auth manager

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -24,7 +24,8 @@
       "default_title": "React Extension"
     },
     "background": {
-      "service_worker": "background.js"
+      "service_worker": "background.js",
+      "type": "module"
     },
     "web_accessible_resources": [
       {
