--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -4,17 +4,12 @@
   "manifest_version": 3,
   "description": "Transform your Browse experience with Taber, the intelligent AI chat assistant that brings the power of AI to any webpage.",
   "author": "Taber",
-  "homepage_url": "https://your-website.com",
+  "homepage_url": "https://tubetor.xyz",
   
   "permissions": [
     "identity",
-    "activeTab", 
-    "scripting",
+    "activeTab",
     "storage"
-  ],
-  
-  "optional_permissions": [
-    "tabs"
   ],
   
   "host_permissions": [
@@ -37,7 +32,7 @@
   
   "action": {
     "default_popup": "popup.html",
-    "default_title": "Taber - AI Chat Assistant",
+    "default_title": "Taber - In-broswer Agent",
     "default_icon": {
       "16": "icons/16x16.png",
       "48": "icons/48x48.png",
