--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -23,7 +23,7 @@ Mako==1.3.10
 MarkupSafe==3.0.2
 proto-plus==1.26.1
 protobuf==6.31.1
-psycopg2-binary==2.9.9
+psycopg2-binary
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pydantic==2.11.5
